# cs525-project

./: .gitignore  README.md  start.sh  stop.sh
driver/: README.md  api-server.py  consumer.py  data-source.py  driver.py  main.py  phishing-dataset.txt  pyproject.toml  river-ex.py  run.sh  runlog  sample.py  scikit-ex.py  sim.py  simuator.py
driver/appl/: kafka_interface.py  olm.py
driver/data/: 1000-dataset.txt
driver/dol_optim/: sync_sgd.py  trad_sgd.py
driver/examples/: publisher.py
driver/tests/: test_driver.py
kafka_2.13-2.7.0/config/: server.properties
