[tool.poetry]
name = "driver"
version = "0.1.0"
description = ""
authors = ["Sarma Krovi <sarmakdvsr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kafka-python = "^2.0.2"
confluent-kafka = "^1.6.1"
fastapi = "^0.63.0"
river = {git = "https://github.com/online-ml/river.git"}
sklearn = "^0.0"
uvicorn ="^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
